--- a/config.yaml
+++ b/config.yaml
@@ -33,7 +33,7 @@ params:
         - post
     featuredImageField: image
     rssFullContent: true
-    favicon: img/avatar.png
+    favicon: favicon.ico
 
     footer:
         since: 2022
@@ -45,7 +45,7 @@ params:
 
     sidebar:
         emoji: 😶
-        subtitle: haha
+        subtitle: hahahaha
         avatar:
             enabled: true
             local: true
